@@ -24,6 +24,8 @@ Revision history for DBIx::Class
           masks missing dependency exceptions (RT#66823)
         - Fix bug in Schema::Versioned failing to insert a schema version row
           during upgrades at the turn of the second
+        - Fix incorrect bind of integers >= 2^^32 (bigint columns) to
+          SQL_INTEGER, resulting in silent conversion to '-1'
 
 0.08192 2011-05-10 04:20 (UTC)
     * Fixes
